--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,3 +1,10 @@
-git add codemagic.yaml
-git commit -m 'Add first workflow'
-git push
+workflows:
+  apk-build:
+    name: Build APK
+    environment:
+      flutter: stable
+    scripts:
+      - flutter pub get
+      - flutter build apk --release
+    artifacts:
+      - build/app/outputs/flutter-apk/app-release.apk
